# ndglog

./: CMakeLists.txt  LICENSE  README.rst
cmake/: ndglog-config.cmake
demo/: CMakeLists.txt  main.c
ndglog/: logging.c  logging.h
